--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 e CSS3</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic ex enim minima rerum voluptatum laborum placeat! Voluptatibus, possimus a eveniet ipsum eius veniam consequuntur cum molestias hic, sequi dignissimos officia!</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, molestias? Nesciunt, placeat eligendi. Tempore, inventore nemo corrupti error atque suscipit tenetur commodi molestiae voluptate facere, accusamus qui ea tempora numquam.</p>
         </article>
     </main>
 </body>
