--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
     <main>
         <header>
             <h1>Cursos Grátis</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="curso em vídeo">
         </header>
         <article>
             <h2>Curso de HTML5 e CSS3</h2>
+            <img class="lado" src="imagens/curso-html-css.png" alt="curso de html e css">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic ex enim minima rerum voluptatum laborum placeat! Voluptatibus, possimus a eveniet ipsum eius veniam consequuntur cum molestias hic, sequi dignissimos officia!</p>
+            <p><a href="curso-html.html">Acesse o curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
+            <img class="lado" src="imagens/curso-javascript.png" alt="curso de javascript">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, molestias? Nesciunt, placeat eligendi. Tempore, inventore nemo corrupti error atque suscipit tenetur commodi molestiae voluptate facere, accusamus qui ea tempora numquam.</p>
+            <p><a href="">Acesse o curso de JavaScript</a></p>
         </article>
     </main>
 </body>
